# crypto-research

./: .gitignore
binance-sdk-rs/: Cargo.toml
binance-sdk-rs/src/client/: constants.rs  dto.rs  mod.rs
coingecko-sdk-rs/: Cargo.toml  coin_info.csv  filtered_categories.json
coingecko-sdk-rs/output/: coin_info.csv
coingecko-sdk-rs/src/: constants.rs  lib.rs  main.rs
coingecko-sdk-rs/src/client/: constants.rs  dto.rs  mod.rs
coingecko-sdk-rs/src/io/: constants.rs  mod.rs
market-sifter/: Cargo.toml
market-sifter/output/: change_summary_2024-07-17_19-36.json  change_summary_2024-07-17_20-51.json  change_summary_2024-07-18_19-17.json  change_summary_2024-09-10_08-14.json  change_summary_2024-09-28_18-39.json  change_summary_2024-09-29_20-30.json  change_summary_2024-11-08_15-48.json  change_summary_2024-11-08_19-36.json  change_summary_2024-12-24_10-48.json  coin_info_2024-06-29_13-17.csv  coin_info_2024-07-17_19-36.csv  coin_info_2024-07-17_20-51.csv  coin_info_2024-07-18_19-17.csv  coin_info_2024-09-10_08-14.csv  coin_info_2024-09-28_18-39.csv  coin_info_2024-09-29_20-30.csv  coin_info_2024-11-08_15-48.csv  coin_info_2024-11-08_19-36.csv  coin_info_2024-12-24_10-48.csv  filtered_categories.json
market-sifter/src/: main.rs
market-sifter/src/io/: constants.rs  mod.rs
market-sifter/src/models/: mod.rs
market-sifter/src/services/: category.rs  coin_diff.rs  constants.rs  mod.rs  top_coins.rs
