[package]
name = "coingecko_sdk_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "coingecko_sdk_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
time = "0.3.36"
env_logger = "0.11.3"
log = "0.4.21"
