[package]
name = "market-sifter"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.38.1", features = ["full"] }
coingecko_sdk_rs = { path = "../coingecko-sdk-rs" }
binance_sdk_rs = { path = "../binance-sdk-rs" }
serde_json = "1.0.120"
time = { version = "0.3.36", features = ["formatting", "macros"] }
csv = "1.3.0"
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
